[project]
name = 'pychunked_data_view'
version = '2025.05'
# TODO(kkratz): seperate general and test only dependencies
dependencies = [
    'setuptools',
    'pytest',
    'cffi',
    'zarr>=3.0,<4',
    'fsspec',
    'pyyaml',
    'eccodes',
    'pyfdb@git+https://github.com/ecmwf/pyfdb.git@develop',
    'pygribjump@git+https://github.com/ecmwf/gribjump.git@develop',
    'pyyaml',
    'ecmwf-api-client',
    'tqdm',
    'pytest-asyncio'
]
requires-python = ">=3.10"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

