[build-system]
requires = [
  "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfdb"
dynamic = ["version"]

description="Python interface to FDB"
keywords = [
  "python",
  "fdb",
  "tools",
]

license = { file = "LICENSE" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

urls.Documentation = "https://github.com/ecmwf/pyfdb"
urls.Homepage = "https://github.com/ecmwf/pyfdb"
urls.Issues = "https://github.com/ecmwf/pyfdb/issues"
urls.Repository = "https://github.com/ecmwf/pyfdb"

requires-python = ">=3.9"

dependencies = [
  "cffi",
  "findlibs",
  "eccodes>=2.39.1",
  "packaging",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-flakes",
  "gitpython"
  ]

dev = [
  "isort",
  "black",
  "flake8",
  "tox>=4.19",
]

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.setuptools.package-data]
pyfdb = ["processed_fdb.h"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_glob=".*"
skip = ["setup.py"]
src_paths = ["src", "tests"]

[tool.coverage.run]
source = [
  "src/pyfdb/*",
]
include = [
  "tests/*",
]
