[build-system]
requires = [
  "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfdb"
dynamic = ["version"]

description="Python interface to FDB"
keywords = [
  "python",
  "fdb",
  "tools",
]

license = { file = "LICENSE" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

urls.Documentation = "https://github.com/ecmwf/pyfdb"
urls.Homepage = "https://github.com/ecmwf/pyfdb"
urls.Issues = "https://github.com/ecmwf/pyfdb/issues"
urls.Repository = "https://github.com/ecmwf/pyfdb"

requires-python = ">=3.9"

dependencies = [
  "cffi",
  "findlibs",
  "eccodes>=2.39.1",
  "packaging",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-flakes",
  "pytest-cmake",
  "gitpython"
  ]

dev = [
  "isort",
  "black",
  "flake8",
  "tox>=4.19",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_glob=".*"
skip = ["setup.py"]
src_paths = ["pyfdb", "tests"]

[tool.coverage.run]
source = [
  "pyfdb/*",
]
include = [
  "tests/*",
]

[tool.uv.sources]
pyfdb = { workspace = true }

[dependency-groups]
dev = [
    "pyfdb",
]
